tests/programs/invalid/InvalidStaticFinalMethod.java
public class InvalidStaticFinalMethod {
    public static final void staticFinalMethod() {
        // Invalid static final method
    }
}
